RESOLVED FIXED37190
LayoutTestController::m_handlesAuthenticationChallenges isn't initialized
https://bugs.webkit.org/show_bug.cgi?id=37190
Summary LayoutTestController::m_handlesAuthenticationChallenges isn't initialized
Shinichiro Hamaji
Reported 2010-04-07 00:59:39 PDT
Though I've never seen this causes a real issue, we may want to avoid troubles in future.
Attachments
Patch v1 (1.17 KB, patch)
2010-04-07 01:00 PDT, Shinichiro Hamaji
darin: review+
Shinichiro Hamaji
Comment 1 2010-04-07 01:00:28 PDT
Created attachment 52711 [details] Patch v1
Shinichiro Hamaji
Comment 2 2010-04-07 21:12:35 PDT
Note You need to log in before you can comment on or make changes to this bug.