2010-04-07  Shinichiro Hamaji  <hamaji@chromium.org>

Reviewed by Darin Adler.

        LayoutTestController::m_handlesAuthenticationChallenges isn't initialized
        https://bugs.webkit.org/show_bug.cgi?id=37190

        * DumpRenderTree/LayoutTestController.cpp:
        (LayoutTestController::LayoutTestController):

git-svn-id: svn://svn.chromium.org/blink/trunk@57247 bbb929c8-8fbe-4397-9dbb-9b2b20218538